@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST deriving-0.6.2.tar.gz 62722 SHA256 467995a27ad84ef70289bf168507741c635aa1c839c450f20671f93e469a9968 SHA512 f5e14737af085e0f9d2b6a7981d9f63435750fb9cf32401eeaf7f700d0e222e1e5ec647d8a552f8c16ad136da19396d4aea8e739ecf179a6c8ba09b035497fc1 WHIRLPOOL c1f29cfc18e6676a9469b655f202ebab1b6b86c7d867ba3061ac9a07279885d07b5d3a19a3f2766dc8d2a5f9d021c24e82cf71cf08fdb0a84ddb135c475dace4
+DIST deriving-0.7.tar.gz 68471 SHA256 0a26763f8579a558fb3bbc8268bd009208165131b66afd5b5c03e0cff73f2e6c SHA512 c473106aeb36888ff80070ce3646f19a603cee15dcc8d702efdb3d6ac91dd409e94fa36940cb6289004238c130631efe680344324904815c2bf380f28a6c3b79 WHIRLPOOL 9c35cc69fe17f3a0178f8907a66cf610d6c234e11fa7041171a490858ab7542d632ea2e97da08a97d6cbdce0fd322433d577d513dd160b816efd839a0dce01d5
 EBUILD deriving-0.6.2.ebuild 650 SHA256 ce22a8c6640addcb2f16c8fdd060843acda10e06eb596e5dda9da7b0751cd582 SHA512 bea0ba46f59ab23ba2c6af8cd74158f053043c6cbfb5e69ba4c65028e91ac0fd495fe44d12b097ef5bc179a21b1d7018bd30eb6f3bd600c2e49b4e5e9c67ca45 WHIRLPOOL 8e8a802580d722ed5458cbad6782cbedcd8fbb737cdfd882ecf7b4c134d8a48fd3a889c30f329da38140f5394e8248f31578dd5764cb5ffbb9dd3068a1ac9180
-MISC ChangeLog 668 SHA256 d03ecb01399c890079d5cff32a98435e18731abfb14febbf0e39be5d14e68b5b SHA512 1dbf275b3cbfa745768a7167d60fee80972677bda8c142c36463d3c058ffd4db75988be8ac0c7ff8701dece3c87739b2b69a9ae518645b4f335255706dad5abb WHIRLPOOL b19ce15c40f2525b532afa92af6f4ee7bd29dd1436d325594f89c4f4a2b5afb27e0c6ae547b35eb6790af829e4b26b8b105a062bb02c88ef2e283e4135ce055e
+EBUILD deriving-0.7.ebuild 757 SHA256 1b65160be8749c3e510a945ce0a53ccd7e5d3f5bf60292848b70c5ece535d2e2 SHA512 1c6739d6f6e8efb1dc26cc2f1940191dcfd2ffabcebd0e7932571d75501f009198427c0a032f50e6190d549c1da4d6cb16793dfa7ba038983a2633a5dc6922c1 WHIRLPOOL a596768cd8dd9c257b1e82b067096c9b3c04b576fcf1b00d15e67d2522dba34e2b199a35017e5f145088a3fcb77a13b46f1475e7b0a4da4f243983e9672dee45
+MISC ChangeLog 787 SHA256 077bda7b4d99942b73ba7d30fc83faf8279a8a6917978d3d6b1f6a6b26793b4f SHA512 6a40219001fae2d635f74a7abbe18d63df3a480e04376e4ca0f587bd0fe944296abdc37f4a2ede841d3beeb7c2e716ff6ab21cd5b19d66851df23946fa349da5 WHIRLPOOL e913c48ab5a63a0e0b03a8318069b21b435c98253f6f80e80e58fd1b5b970a8a5a282b92b0f79bfb82cfd9385cfe714329b8a2b8ea87d200cdec2daae78d9d34
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRI3boACgkQvFcC4BYPU0oJPACfSS5Kh2W4n7Z1bm8FH15J8Mbl
-oiMAoLKyUZZEiSJKuP/98Be4kFt4+lQb
-=hGVS
+iEYEAREIAAYFAlRQ+CsACgkQvFcC4BYPU0ox7gCdFxDiUCwd1kfFncC5Axb8D8Qu
+2W8AnjwCXQ96ozNIdsgExyxYIZvf1c0g
+=mhS2
 -----END PGP SIGNATURE-----
