@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST ocaml-gettext-0.3.4.tar.gz 165292 SHA256 e19214638e8cf078aabda82e7bc4d49a65a557d9c54648a7fd8db6ef84c83302 SHA512 bd51c267c28cb77d0648d9570ef4d75c149c921c75f611229b50f8f6a521997d4fd044f1aa4ffbb2628e1e38c3bee58f113495536a47db2e3ca58e0903a312bc WHIRLPOOL c7a7a33e75837a25fdbeac72610a697fe2819cea8c07b2d3b570e90be6a187bc9037d10c56e182a0dd9810c1d7ba04e4f002a8196b87c5c6ee760ac3b6e991a6
+DIST ocaml-gettext-0.3.5.tar.gz 165238 SHA256 d19484ba7e14d078c85da66cba1eb28ed0cdc92c84db45e6dfb8f7e40f2cc268 SHA512 a60d51c09dad3076415ef24a9bb3121f84ad649d7a9fa1b9a7da719dd385e4ed7cd9ffbabefbade7ea0daf7b0a5a5eb71b1d0ed21b369914b49f66d0d918c446 WHIRLPOOL b638ecfe765e673408ced9e4ee0467029b7a7dbf0dfff826c45471b0cea2c26765db9b833d261be325abf5579e90ab0f669fac2a1cd7682e26d49a2fc277e5f0
 EBUILD ocaml-gettext-0.3.4.ebuild 1214 SHA256 56318e5da7a26419fb5e2ad38a7215a05122ce8bdf326f8955dcc44d108cdcda SHA512 477cca84b7c8c9d6a77c33bb1c6758598d1724ec0bfcc3fda145cb4412b56474d7e1db4cae9e62e0bc9be23a1e1d7cb5ab7ba4a531a4dd5ecf9d5ca0c1dcebbb WHIRLPOOL d45e82453b5a079ec2b545139ae903756c244237545afc0955dc8087847e2ff03c3326a85907ea5a984567220f053e717879a48547cdd91ff62d4e275763c2b8
-MISC ChangeLog 736 SHA256 6e07ff3617e462e403c60527d1bdff53e6f82a681e55c0d74febbb84178fd9e9 SHA512 3c5b3b2fa8ef40d01a7e2f75bcb682378e8a411c5fe3c1b054ec2e796f0ecc663043746ed2db0c2529201fd402d31e0f6c69dce2402b43d3e34fcc3e4c323bb8 WHIRLPOOL dbb30a8aa7d17714d1654c7c4a08463566f5bb7db496965db0446562007f70a457f53e17e32b49822b069793bf4037d4e8e0763ac5ff435ccd496c5f950b006d
+EBUILD ocaml-gettext-0.3.5.ebuild 1217 SHA256 35fafb3d9b72eafa390b390da2b348c5d2935f13bbe847437eb25d89b290831e SHA512 fa7ab7a0ea73c6b368b998ffcf5d0433b98c1562f9bb5bba4bcc33075444023c59d888791f03c6a2e9131181454a6afffe7fa02bf1cf943500aaadc148eb210d WHIRLPOOL 479e175cc901760e104a46882613eabbfaeb87af3318d80070dd0e143e0e5c7b29d5c6d47eedca057eab0a8faadfc60655985348dd3832dd740cf2ad2e489981
+MISC ChangeLog 873 SHA256 14f2926d937383d2594eeee2bedd092655b8387edf40373ed27fce807b8e4a04 SHA512 95122f34bfa280071dcbb74849f5889afec551214dbc4bc3f2fe0bda0b556bf3106d47dccc82560818769ccda7191d079fefae5b427478cbd98c2ea4ef9702e2 WHIRLPOOL 2710b7e10b6e80c9568e715a8c02789ca755c8b57d94e0eae55be3588a5830d0aa4187cbc2881a2c800263cc0e529afaf1d9c8274358d50003f837591a8ab3ef
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlIYtFEACgkQkKaRLQcq0GI5pQCeNnxa6khBAxCgZ8waCoGEFcqh
-Eo0AoKDTP9tujBp0jzA65zfy5XhAUV+9
-=9CBt
+iEYEAREIAAYFAlRQ+SAACgkQvFcC4BYPU0ojpgCeLHnnwal29K5/HyUHwWxHM4cs
+oaUAn3R0Biq244AxmmG/qs83w3UBw91M
+=so05
 -----END PGP SIGNATURE-----
